infrastructure/cilium/network-policies/egress-allow-apiserver.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-allow-apiserver
spec:
  endpointSelector:
    matchExpressions:
      - key: io.cilium.k8s.namespace.labels.network-egress-apiserver
        operator: Exists
  egress:
    - toEntities:
        - kube-apiserver
