infrastructure/cilium/network-policies/egress-allow-s3.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-allow-s3
spec:
  endpointSelector:
    matchExpressions:
      - key: io.cilium.k8s.namespace.labels.network-egress-s3
        operator: Exists
  egress:
    - toFQDNs:
        - matchName: "s3.wevelsiep.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
