infrastructure/cilium/network-policies/egress-apiserver.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-apiserver-egress
spec:
  endpointSelector:
    matchExpressions:
      - key: io.cilium.k8s.namespace.labels.network-apiserver-egress
        operator: Exists
  egress:
    - toEntities:
        - kube-apiserver
