infrastructure/cilium/network-policies/egress-deny-all.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-deny-all
spec:
  endpointSelector:
    matchExpressions:
      - key: io.cilium.k8s.namespace.labels.network-egress-deny-all
        operator: Exists
  egress:
    - {}
