infrastructure/cilium/network-policies/ingress-allow-homepage.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-allow-homepage
spec:
  endpointSelector:
    matchExpressions:
      - key: io.cilium.k8s.namespace.labels.network-ingress-homepage
        operator: Exists
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: homepage
