infrastructure/cilium/network-policies/ingress-deny-all.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-deny-all
spec:
  endpointSelector:
    matchExpressions:
      - key: io.cilium.k8s.namespace.labels.network-ingress-deny-all
        operator: Exists
  ingress:
    - {}
