infrastructure/cilium/network-policies/ingress-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: deny-ingress
spec:
  endpointSelector:
    matchExpressions:
      - key: io.cilium.k8s.namespace.labels.network-deny-ingress
        operator: Exists
  ingress:
    - {}
